app/charts/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-app-route
  namespace: pyapp
spec:
  to:
    kind: Service
    name: my-app-service
  port:
    targetPort: 80
  wildcardPolicy: None
